feat: Implement authentication and refresh token functionality
- Added RefreshToken model and migration for storing refresh tokens.
- Created auth middleware to protect routes and verify JWT tokens.
- Implemented user registration and login routes with JWT access and refresh tokens.
- Added refresh token endpoint to issue new access tokens using HttpOnly cookies.
- Developed logout functionality to revoke refresh tokens.
- Created routes for managing schedules and quick links with authentication.
- Built frontend components for login, registration, calendar, and quick link management.
- Integrated API calls with authentication and error handling.
- Styled components using Vanilla Extract for consistent UI.

--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   },
   "devDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.22.0",
+    "bcryptjs": "^2.4.3"
   }
 }
