--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,17 +7,26 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "start": "node ./dist/index.js",
-    "build": "tsc -p tsconfig.json --outDir dist"
+    "build": "tsc -p tsconfig.json --outDir dist",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev --name init"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "@trpc/server": "^10.0.0",
-    "express": "^4.18.2",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "zod": "^3.0.0"
   },
   "devDependencies": {
-    "ts-node-dev": "^2.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "prisma": "^5.0.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.0"
   }
 }
