--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -20,6 +20,8 @@
     "@vitejs/plugin-react": "^4.0.0",
     "typescript": "^5.0.0",
     "@vanilla-extract/css": "^1.14.0",
-    "@vanilla-extract/vite-plugin": "^4.0.0"
+    "@vanilla-extract/vite-plugin": "^4.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0"
   }
 }
