feat(server): integrate tRPC for API routes and context management
- 인증을 위한 컨텍스트 생성을 포함한 tRPC 설정을 추가했습니다.
- auth, schedules, quicklinks를 처리하는 appRouter를 구현했습니다.
- CRUD 작업을 포함한 auth, schedules, quicklinks용 라우터들을 생성했습니다.
- 이전 호환성을 유지하기 위해 기존 REST API 라우트를 업데이트했습니다.
라우트의 오류 처리 및 응답 구조를 개선했습니다.

feat(web): migrate to tRPC for data fetching and mutations

- 컴포넌트에서 REST API 호출을 tRPC 쿼리 및 뮤테이션으로 교체했습니다.
- Calendar, QuickLinkBoard, LoginPage, RegisterPage 컴포넌트를 업데이트했습니다.
- 클라이언트 구성을 위한 중앙 집중형 trpc.ts 파일을 도입했습니다.
- Vite 구성에 API URL을 위한 환경 변수 지원을 추가했습니다.
- 로딩 상태와 오류를 UI에서 처리하여 사용자 경험을 향상시켰습니다.

fix(web): clean up unused code and improve component structure

- 컴포넌트에서 중복된 fetch 로직과 상태 관리를 제거했습니다.
- 가독성과 유지보수성을 위해 컴포넌트 코드를 정리했습니다.
- 컴포넌트 전반에서 API 응답 및 오류 처리를 일관되게 보장했습니다.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   ],
   "scripts": {
     "dev": "pnpm -w -r run dev",
+    "dev:local": "pnpm -w -r run dev:local",
     "build": "pnpm -w -r run build",
-    "start": "pnpm -w -r --parallel run start"
+    "build:prod": "pnpm -w -r run build:prod",
+    "build:dev": "pnpm -w -r run build:dev",
+    "start": "pnpm -w -r --parallel run start",
+    "start:dev": "pnpm -w -r --parallel run start:dev"
   },
   "devDependencies": {
     "typescript": "^5.0.0"
