--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,11 +5,15 @@
   "types": "src/index.ts",
   "private": true,
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "start": "node ./dist/index.js",
+    "dev": "NODE_ENV=development ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev:local": "NODE_ENV=development ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc -p tsconfig.json --outDir dist",
+    "build:prod": "NODE_ENV=production pnpm build",
+    "start": "NODE_ENV=production node ./dist/index.js",
+    "start:dev": "NODE_ENV=development node ./dist/index.js",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev --name init"
+    "prisma:migrate": "prisma migrate dev --name init",
+    "prisma:migrate:deploy": "prisma migrate deploy"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
@@ -17,14 +21,16 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "zod": "^3.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^9.0.0",
-    "@types/bcryptjs": "^2.4.2",
+    "@types/node": "^24.10.0",
     "prisma": "^5.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.0"
