--- a/package.json
+++ b/package.json
@@ -15,11 +15,34 @@
     "start": "pnpm -w -r --parallel run start",
     "start:dev": "pnpm -w -r --parallel run start:dev"
   },
+  "overrides": {
+    "@prisma/client": "^5.22.0",
+    "bcryptjs": "^2.4.3",
+    "@trpc/server": "^10.0.0",
+    "@trpc/client": "^10.0.0",
+    "@trpc/react-query": "^10.0.0",
+    "@tanstack/react-query": "^4.0.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "zod": "^3.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "@vanilla-extract/css": "^1.14.0",
+    "@vanilla-extract/vite-plugin": "^4.0.0",
+    "typescript": "^5.0.0",
+    "prisma": "^5.0.0",
+    "ts-node-dev": "^2.0.0"
+  },
   "devDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "catalog:"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
-    "bcryptjs": "^2.4.3"
+    "@prisma/client": "catalog:",
+    "bcryptjs": "catalog:"
   }
 }
