--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,23 +16,23 @@
     "prisma:migrate:deploy": "prisma migrate deploy"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
-    "@trpc/server": "^10.0.0",
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "zod": "^3.0.0"
+    "@prisma/client": "catalog:",
+    "@trpc/server": "catalog:",
+    "bcryptjs": "catalog:",
+    "cookie-parser": "catalog:",
+    "cors": "catalog:",
+    "dotenv": "catalog:",
+    "express": "catalog:",
+    "jsonwebtoken": "catalog:",
+    "zod": "catalog:"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^9.0.0",
-    "@types/node": "^24.10.0",
-    "prisma": "^5.0.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.0"
+    "@types/bcryptjs": "catalog:",
+    "@types/express": "catalog:",
+    "@types/jsonwebtoken": "catalog:",
+    "@types/node": "catalog:",
+    "prisma": "catalog:",
+    "ts-node-dev": "catalog:",
+    "typescript": "catalog:"
   }
 }
