--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,33 @@
 packages:
   - 'packages/*'
+
+# Central dependency catalog (default)
+# Edit versions here to upgrade libraries across the workspace.
+catalog:
+  react: "^18.2.0"
+  react-dom: "^18.2.0"
+  "@trpc/client": "^10.0.0"
+  "@trpc/server": "^10.0.0"
+  "@trpc/react-query": "^10.0.0"
+  "@tanstack/react-query": "^4.0.0"
+  "@prisma/client": "^5.22.0"
+  prisma: "^5.0.0"
+  bcryptjs: "^2.4.3"
+  "cookie-parser": "^1.4.6"
+  cors: "^2.8.5"
+  dotenv: "^17.2.3"
+  express: "^4.18.2"
+  jsonwebtoken: "^9.0.0"
+  zod: "^3.0.0"
+  vite: "^5.0.0"
+  "@vitejs/plugin-react": "^4.0.0"
+  "@vanilla-extract/css": "^1.14.0"
+  "@vanilla-extract/vite-plugin": "^4.0.0"
+  typescript: "^5.0.0"
+  "ts-node-dev": "^2.0.0"
+  "@types/react": "^18.2.0"
+  "@types/react-dom": "^18.2.0"
+  "@types/node": "^24.10.0"
+  "@types/express": "^4.17.13"
+  "@types/jsonwebtoken": "^9.0.0"
+  "@types/bcryptjs": "^2.4.2"
